@@ -25,7 +25,7 @@ val load_proofs : load_proofs ref
 
 val raw_print : bool ref
 
-type compat_version = V8_2
+type compat_version = V8_2 | V8_3
 val compat_version : compat_version option ref
 val version_strictly_greater : compat_version -> bool
 val version_less_or_equal : compat_version -> bool
